# SkipEngine

./: CMakeLists.txt  README.md  build_project.sh  source-env.sh
include/: Camera.h  ImguiContext.h  SkipScene.h  VulkanDevice.h  VulkanManager.h  VulkanSwapchain.h  VulkanWindow.h
include/objects/: Cube.h  Model.h  ModelObject.h  SkipObject.h  Sphere.h
libs/imgui/: imgui_impl_glfw.cpp  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h  imgui_impl_win32.cpp  imgui_impl_win32.h
resources/shaders/: shader.frag  shader.vert
src/: Camera.cpp  ImguiContext.cpp  SkipScene.cpp  VulkanDevice.cpp  VulkanManager.cpp  VulkanSwapchain.cpp  VulkanWindow.cpp  main.cpp
src/objects/: Cube.cpp  Model.cpp  ModelObject.cpp  SkipObject.cpp  Sphere.cpp
